add 1st functional version of drag & drop feature on create meal form

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,3 +18,19 @@ a {
 ul {
 	list-style-type: none;
 }
+
+.draggable-food {
+	cursor: move;
+}
+
+.drop-zone {
+	border: 1px solid slategrey;
+}
+
+.drop-zone.over {
+	border: 4px dashed green;
+}
+
+.drop-zone.dragover {
+	border: 2px dotted red;
+}
