--- a/src/styles/Foods.css
+++ b/src/styles/Foods.css
@@ -15,7 +15,7 @@
   justify-content: space-between;
   border: 1px solid;
   padding: 1rem;
-  margin: 1rem;
+  margin: 1rem 0;
   width: 33vw;
 }
 
