--- a/src/styles/meals.css
+++ b/src/styles/meals.css
@@ -1,9 +1,66 @@
+/* create & edit meal forms */
+
+.meal-form {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  width: 100%;
+}
+
+/* --- for food display */
+
+.dnd-action-div {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.added-food {
+  min-width: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.meal-food {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: .5rem;
+}
+
+.meal-food .food-info {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.meal-food .food-info .catColor {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 15px;
+  width: 15px;
+  border: 1px solid;
+}
+
+.meal-food .actionBtn, .meal-week-nav .actionBtn {
+  border-radius: 5px;
+  border: 1px solid black;
+  background-color: white;
+  padding: 0 .3rem;
+}
+
+/* --- for the drag & drop part */
+
 .draggable-food {
   cursor: move;
 }
 
 .drop-zone {
   border: 1px solid slategrey;
+  padding: .5rem;
 }
 
 .drop-zone.over {
@@ -14,8 +71,86 @@
   border: 2px dotted red;
 }
 
-.added-food {
-  min-width: 100px;
+/* meals display for a given week */
+
+.meals-display {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 2rem;
+}
+
+.meal-week-nav {
   display: flex;
   justify-content: space-between;
+  width: 100%;
+  margin: 1rem 0;
+}
+
+.meal-week {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  width: 100%;
+}
+
+.day-container {
+  min-width: 200px;
+}
+
+.day-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: .3rem .5rem;
+}
+
+.day-meals {
+  background-color: whitesmoke;
+  border: 1px solid lightslategrey;
+  border-radius: 5px;
+}
+
+.day-meals .fa-solid {
+  color: white;
+}
+
+.day-meals:not(:last-of-type) {
+  margin-bottom: .3rem;
+}
+
+.meal-card {
+  background-color: white;
+  padding: .5rem;
+  margin: .5rem;
+  border: 1px dotted lightslategrey;
+  border-radius: 5px;
+}
+
+.meal-card-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: lightslategrey;
+  border-radius: 5px;
+  color: white;
+  padding: .3rem;
+}
+
+.meal-card-title div {
+  font-weight: bold;
+  font-size: .8rem;
+}
+
+.meal-card .food-info {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.meal-card .food-info .catColor {
+  height: 10px;
+  width: 10px;
+  border: 1px solid;
 }
