--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,12 @@ html {
   font-family: "Manrope", sans-serif;
 }
 
+/* body {
+  width: 60%;
+  margin-right: auto;
+  margin-left: auto;
+} */
+
 a {
   text-decoration: none;
   color: inherit;
