--- a/src/styles/meals.css
+++ b/src/styles/meals.css
@@ -29,6 +29,7 @@
   display: flex;
   flex-direction: row-reverse;
   gap: 4rem;
+  width: 90vw;
 }
 
 .meal-type.mobile {
@@ -72,6 +73,21 @@
   border: 1px solid black;
   background-color: white;
   padding: 0 .3rem;
+}
+
+.ref-food-filters {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.2em;
+  padding: 0.5rem;
+  margin: 0 0.5rem;
+  width: auto;
+}
+
+.filterBtn,
+.allFoodBtn {
+  margin: 0.2rem;
+  padding: 0 0.5rem;
 }
 
 /* --- for the drag & drop part */
